# mahjong_learning_c

./: .clang-format  .gitignore  CMakeLists.txt  README.md  guangdong_bonus_tiletype_counter.h  guangdong_common_tiletype_counter.h  main.cpp  state.h  tiletype_counter.h
enums/: tiletype.h
rules/: condition.h  raw_decremental_rule.h  raw_function_only_rule.h  raw_incremental_rule.h  raw_rule.h  rule.h
rulesets/: guangdong_ruleset.h  ruleset.h
tilesets/: guangdong_tileset.h  tileset.h
